--- a/style.css
+++ b/style.css
@@ -132,6 +132,41 @@ main{
 .project .right{
     width: 50%;
 }
+.container p{
+    margin: 5vh;
+}
+.contactform{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    width: 80vw;
+    margin: 5vh;
+}
+
+.contactform input, .contactform textarea{
+    margin: 0 0 25px 0;
+    border: 0;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(41, 41, 41);
+    color: rgb(255, 255, 255);
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+}
+
+.contactform button{
+    margin: 30px 0;
+    border: 0;
+    border-radius: 15px;
+    padding: 20px;
+    background-color: aqua;
+    width: 200px;
+    font-family: 'Poppins', sans-serif;
+    font-size: large;
+    font-weight: bold;
+}
 
 /* _____________ */
 
